--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     data: classpath:db/data.sql
     schema: classpath:db/schema.sql
     url: jdbc:h2:~/db;MODE=MySql;DB_CLOSE_DELAY=-1
-    username: gxm
-    password: 599111lxy
+    username: sa
+    password: sa
     sql-script-encoding: utf-8
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
